# gs

./: Makefile  README.md  gmail.yaml.example  gs.yaml.example  install.sh  pyproject.toml
.claude/skills/using-gmail/: SKILL.md
.claude/skills/using-gmailtail/: SKILL.md
.claude/skills/using-gs/: SKILL.md
docs/superpowers/specs/: 2026-05-28-gmail-refactor-design.md  2026-05-28-gs-google-suite-design.md
gmail/: .gitignore  auth.py  cache.py  checkpoint.py  cli.py  client.py  config.py  messages.py  repl.py
gmail/commands/: __init__.py  label.py  mark.py  repl.py  rm.py  send.py  tail.py
gs/: __init__.py  auth.py  calendar_service.py  cli.py  client.py  config.py  drive_service.py  formatter.py  labels.py  monitor.py
gs/commands/: __init__.py  auth.py  calendar.py  drive.py  gmail_group.py  mv.py  profile.py  read.py  rm.py  tail.py
tests/: test_calendar_drive.py  test_cli.py  test_config_and_formatter.py  test_services.py
